--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
